--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Mamakele</h1>
-        <h2>blog</h2>
+        <h2>可乐的博客</h2>
       </div>
     </header>
 
